--- a/webApplication/src/main/webapp/footer.html
+++ b/webApplication/src/main/webapp/footer.html
@@ -3,7 +3,7 @@
 <br>
 <table><tbody><tr>
     <td bgcolor="#dee6d9" align="center" width=2000><font style="font-size: 15px; color: rgb(102, 102, 255); font-family: arial,helvetica,sans serif;">Copyright 
-      ©2023, abc.com. All rights reserved  <b>Red Hat India pvt Ltd.</b>
+      ©2023, redhat.com. All rights reserved  <b>Red Hat India pvt Ltd.</b>
                                         Email: <a href="pthonge@redhat.com">pthonge@redhat.com</a>
                                         Phone: (123) 456-7890 
                                        </font></td></tr>
