--- a/webApplication/src/main/webapp/header2.html
+++ b/webApplication/src/main/webapp/header2.html
@@ -5,14 +5,15 @@
 <title>Insert title here</title>
 </head>
 <body>
-<img src="/Web_Application/Header.jpg" alt="img" width="100%" height="60" />
- <font align="left" style="font-size: 15px; color: rgb(102, 102, 255); font-family: arial,helvetica,sans serif;">
+ <img src="/Web_Application/Header.jpg" alt="img" width="100%" height="60" /> 
+ <font align="left" style="font-size: 25px; color: rgb(46, 52, 54);>
 <ul class="artmenu">
-                        <li>
-                        <a href="/Web_Application/index.jsp" ><span><span>Home</span></span></a>
-                        <a href="/Web_Application/student/stud_index.jsp"><span><span>Student</span></span></a>
-                        <a href="/Web_Application/Admin/Admin_index.jsp">Admin</a>
-                        <a href="../logout.jsp">Logout</a>
+</br>
+</br>
+<!--                         <li> -->
+<!--                         <a href="/Web_Application/index.jsp" ><span><span>Home</span></span></a> | -->
+<!--                         <a href="/Web_Application/student/stud_index.jsp"><span><span>Student</span></span></a> | -->
+<!--                         <a href="/Web_Application/Admin/Admin_index.jsp">Admin</a> -->
 
                                    
 </li>
