--- a/webApplication/src/main/webapp/header.html
+++ b/webApplication/src/main/webapp/header.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<marquee><font style="font-size: 30px; color: rgb(102, 102, 255); font-family: arial,helvetica,sans serif;">Welcome to Digital Library</font></marquee>
+<!-- <marquee><font style="font-size: 30px; color: rgb(102, 102, 255); font-family: arial,helvetica,sans serif;">Welcome to Digital Library</font></marquee> -->
 
 <script type="text/javascript">
 document.write ('<p><span id="date-time">', new Date().toLocaleString(), '<\/span>.<\/p>')
